--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -10,7 +10,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name landplex.ru;
+    server_name pixeluks.ru;
 
     location / {
         proxy_pass http://frontend/;
