--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,3 @@
-API_URL="http://localhost:8000"
-API_URL_WS="ws://localhost:8000"
+API_URL="http://localhost:8000/api"
+API_URL_WS="ws://localhost:8000/api"
 GOOGLE_CLIENT_ID=""
