--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -19,16 +19,15 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location /api/ {
-        proxy_pass http://backend/;
-        rewrite ^/api/(.*)$ /$1 break;
+    location /api {
+        proxy_pass http://backend/api;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location /api/ws {
-        proxy_pass http://backend/ws;
+    location /api/board/ws {
+        proxy_pass http://backend/api/board/ws;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
