--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-google-recaptcha-v3": "^1.11.0",
     "tailwindcss": "^4.1.13",
     "uuid": "^13.0.0"
   },
