--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-google-recaptcha-v3": "^1.11.0",
+    "react-router": "^7.9.1",
     "tailwindcss": "^4.1.13",
     "uuid": "^13.0.0"
   },
